# image-scanner

./: .gitignore  README.md  hash  package-lock.json  package.json  tsconfig.json  webpack.config.js
docs/: README.ja.md
lib/: Cargo.toml  README.md  build.sh
lib/src/: compare_image.rs  hash.rs  lib.rs
src/: global.d.ts  index.ts
src/locale/: ja.json
